cmake_minimum_required(VERSION 4.0)
project(Projeto)

set(CMAKE_CXX_STANDARD 26)

add_executable(Projeto main.cpp
        Simulador/Plantas/Roseira.cpp
        Simulador/Plantas/Roseira.h
        Simulador/Plantas/Cacto.cpp
        Simulador/Plantas/Cacto.h
        Simulador/Plantas/Daninha.cpp
        Simulador/Plantas/Daninha.h
        Simulador/Plantas/M4rg4rid4.cpp
        Simulador/Plantas/M4rg4rid4.h
        Simulador/Ferramentas/Tesoura.cpp
        Simulador/Ferramentas/Tesoura.h
        Simulador/Ferramentas/Ferramenta.cpp
        Simulador/Ferramentas/Ferramenta.h
        Simulador/Plantas/Planta.cpp
        Simulador/Plantas/Planta.h
        Simulador/Ferramentas/Adubo.cpp
        Simulador/Ferramentas/Adubo.h
        Simulador/Ferramentas/Regador.cpp
        Simulador/Ferramentas/Regador.h
        Simulador/Ferramentas/Trator.cpp
        Simulador/Ferramentas/Trator.h
        Simulador/Jardim.cpp
        Simulador/Jardim.h
        Simulador/Posicao.cpp
        Simulador/Posicao.h
        Simulador/Jardineiro.cpp
        Simulador/Jardineiro.h
        Interface/Interface.cpp
        Interface/Interface.h
        Simulador/Simulador.cpp
        Simulador/Simulador.h
        Comandos/Comando.cpp
        Comandos/Comando.h
        Comandos/Instante/cmdAvancaInstante.cpp
        Comandos/Instante/cmdAvancaInstante.h
        Comandos/Listar/cmdListarPlantasExistentesNoJardim.cpp
        Comandos/Listar/cmdListarPlantasExistentesNoJardim.h
        Comandos/Listar/cmdListarPropriedadesPlantaPosicao.cpp
        Comandos/Listar/cmdListarPropriedadesPlantaPosicao.h
        Comandos/Listar/cmdListarArea.cpp
        Comandos/Listar/cmdListarArea.h
        Comandos/Listar/cmdListarCertaArea.cpp
        Comandos/Listar/cmdListarCertaArea.h
        Comandos/Listar/cmdListarFerramentas.cpp
        Comandos/Listar/cmdListarFerramentas.h
        Comandos/Acao/cmdColherPlanta.cpp
        Comandos/Acao/cmdColherPlanta.h
        Comandos/Acao/cmdPlantar.cpp
        Comandos/Acao/cmdPlantar.h
        Comandos/Acao/cmdLargarFerramenta.cpp
        Comandos/Acao/cmdLargarFerramenta.h
        Comandos/Acao/cmdPegarFerramenta.cpp
        Comandos/Acao/cmdPegarFerramenta.h
        Comandos/Acao/cmdComprarFerramenta.cpp
        Comandos/Acao/cmdComprarFerramenta.h
        Comandos/Movimento/cmdMoveEsquerda.cpp
        Comandos/Movimento/cmdMoveEsquerda.h
        Comandos/Movimento/cmdMoveDireita.cpp
        Comandos/Movimento/cmdMoveDireita.h
        Comandos/Movimento/cmdMoveCima.cpp
        Comandos/Movimento/cmdMoveCima.h
        Comandos/Movimento/cmdMoveBaixo.cpp
        Comandos/Movimento/cmdMoveBaixo.h
        Comandos/Movimento/cmdEntraJardineiro.cpp
        Comandos/Movimento/cmdEntraJardineiro.h
        Comandos/Movimento/cmdSaiJardineiro.cpp
        Comandos/Movimento/cmdSaiJardineiro.h
        Comandos/EstadoJogo/cmdCriarJardim.cpp
        Comandos/EstadoJogo/cmdCriarJardim.h
        Comandos/EstadoJogo/cmdGravarEstadoJardim.cpp
        Comandos/EstadoJogo/cmdGravarEstadoJardim.h
        Comandos/EstadoJogo/cmdRecuperarEstadoJardim.cpp
        Comandos/EstadoJogo/cmdRecuperarEstadoJardim.h
        Comandos/EstadoJogo/cmdApagarEstadoJardim.cpp
        Comandos/EstadoJogo/cmdApagarEstadoJardim.h
        Comandos/EstadoJogo/cmdFim.cpp
        Comandos/EstadoJogo/cmdFim.h
        Comandos/EstadoJogo/cmdExecutaCmdTeste.cpp
        Comandos/EstadoJogo/cmdExecutaCmdTeste.h
        Simulador/Beleza.h
        Simulador/Prioridade.h
        Comandos/ProcessaCMD.cpp
        Comandos/ProcessaCMD.h
)
