cmake_minimum_required(VERSION 4.0)
project(Projeto)

set(CMAKE_CXX_STANDARD 26)

add_executable(Projeto main.cpp
        Model/Plantas/Roseira.cpp
        Model/Plantas/Roseira.h
        Model/Plantas/Cacto.cpp
        Model/Plantas/Cacto.h
        Model/Plantas/Daninha.cpp
        Model/Plantas/Daninha.h
        Model/Plantas/M4rg4rid4.cpp
        Model/Plantas/M4rg4rid4.h
        Model/Ferramentas/Tesoura.cpp
        Model/Ferramentas/Tesoura.h
        Model/Ferramentas/Ferramenta.cpp
        Model/Ferramentas/Ferramenta.h
        Model/Plantas/Planta.cpp
        Model/Plantas/Planta.h
        Model/Ferramentas/Adubo.cpp
        Model/Ferramentas/Adubo.h
        Model/Ferramentas/Regador.cpp
        Model/Ferramentas/Regador.h
        Model/Ferramentas/Trator.cpp
        Model/Ferramentas/Trator.h
        Model/Jardim.cpp
        Model/Jardim.h
        Model/Posicao.cpp
        Model/Posicao.h
        Model/Jardineiro.cpp
        Model/Jardineiro.h
        View/Interface.cpp
        View/Interface.h
        Model/Simulador.cpp
        Model/Simulador.h
        Controller/Comando.cpp
        Controller/Comando.h
        Controller/Instante/cmdAvancaInstante.cpp
        Controller/Instante/cmdAvancaInstante.h
        Controller/Listar/cmdListarPlantasExistentesNoJardim.cpp
        Controller/Listar/cmdListarPlantasExistentesNoJardim.h
        Controller/Listar/cmdListarPropriedadesPlantaPosicao.cpp
        Controller/Listar/cmdListarPropriedadesPlantaPosicao.h
        Controller/Listar/cmdListarArea.cpp
        Controller/Listar/cmdListarArea.h
        Controller/Listar/cmdListarCertaArea.cpp
        Controller/Listar/cmdListarCertaArea.h
        Controller/Listar/cmdListarFerramentas.cpp
        Controller/Listar/cmdListarFerramentas.h
        Controller/Acao/cmdColherPlanta.cpp
        Controller/Acao/cmdColherPlanta.h
        Controller/Acao/cmdPlantar.cpp
        Controller/Acao/cmdPlantar.h
        Controller/Acao/cmdLargarFerramenta.cpp
        Controller/Acao/cmdLargarFerramenta.h
        Controller/Acao/cmdPegarFerramenta.cpp
        Controller/Acao/cmdPegarFerramenta.h
        Controller/Acao/cmdComprarFerramenta.cpp
        Controller/Acao/cmdComprarFerramenta.h
        Controller/Movimento/cmdMoveEsquerda.cpp
        Controller/Movimento/cmdMoveEsquerda.h
        Controller/Movimento/cmdMoveDireita.cpp
        Controller/Movimento/cmdMoveDireita.h
        Controller/Movimento/cmdMoveCima.cpp
        Controller/Movimento/cmdMoveCima.h
        Controller/Movimento/cmdMoveBaixo.cpp
        Controller/Movimento/cmdMoveBaixo.h
        Controller/Movimento/cmdEntraJardineiro.cpp
        Controller/Movimento/cmdEntraJardineiro.h
        Controller/Movimento/cmdSaiJardineiro.cpp
        Controller/Movimento/cmdSaiJardineiro.h
        Controller/EstadoJogo/cmdCriarJardim.cpp
        Controller/EstadoJogo/cmdCriarJardim.h
        Controller/EstadoJogo/cmdGravarEstadoJardim.cpp
        Controller/EstadoJogo/cmdGravarEstadoJardim.h
        Controller/EstadoJogo/cmdRecuperarEstadoJardim.cpp
        Controller/EstadoJogo/cmdRecuperarEstadoJardim.h
        Controller/EstadoJogo/cmdApagarEstadoJardim.cpp
        Controller/EstadoJogo/cmdApagarEstadoJardim.h
        Controller/EstadoJogo/cmdFim.cpp
        Controller/EstadoJogo/cmdFim.h
        Controller/EstadoJogo/cmdExecutaCmdTeste.cpp
        Controller/EstadoJogo/cmdExecutaCmdTeste.h
        Model/Beleza.h
        Model/Prioridade.h
        Controller/ProcessaCMD.cpp
        Controller/ProcessaCMD.h
)
